add download and some delete
