# areas/backend/controller/data_store_controller.py
@@ -1,5 +1,5 @@
 from enum import Enum
-from typing import Optional
+from typing import Optional, BinaryIO
 from uuid import UUID
 
 from core.accesses import BaseAccess
@@ -43,6 +43,12 @@ class DataStoreController:
 
     def get_item_by_id(self, user_mail: str, item_id: UUID) -> Optional[BaseStorageItem]:
         return self.data_store_service.get_user_file_by_id(user_mail, item_id)
+
+    def download_item(self, item_id: UUID) -> BinaryIO:
+        return self.data_store_service.download_item(user_mail="test", item_id=item_id)
+
+    def delete_item(self, item_id: UUID) -> bool:
+        return self.data_store_service.delete_item(user_mail="test", item_id=item_id)
 
     """
         ==============
